# starlink-dish-mqtt-client-

./: AGENTS.md  README.md  pyproject.toml
src/starlink_taphome_bridge/: cli.py  models.py  mqtt_bridge.py  starlink.py
